feat/#32: 강의 신청 로직 수정